put back jquery

--- a/package.json
+++ b/package.json
@@ -11,5 +11,7 @@
     "url": "https://github.com/omarmeky/jquery-graceful-websocket.git"
   },
   "author": "David Lindkvist",
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^2.1.3"
+  }
 }
