--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "type": "git",
     "url": "https://github.com/omarmeky/jquery-graceful-websocket.git"
   },
-  "author": "David Lindkvist",
+  "author": "David Lindkvist, forked and modified by Omar Meky",
   "dependencies": {
-    "jquery": "^2.1.3"
+    "jQuery-ajaxTransport-XDomainRequest": "git://github.com/MoonScript/jQuery-ajaxTransport-XDomainRequest",
+    "jquery": "^1.11.2"
   }
 }
